# ExtractIBDFromTreeSequence

./: README.md  extract_true_IBDs_subset.py  meson.build  min_span.py  subsets_ibd_seg_500k_subset_chr20_0_300.txt  subsets_ibd_seg_500k_subset_chr20_0_400.txt  test.ipynb
bcftools/: config.mk  config.status
bcftools/htslib/: config.h  config.mk  config.status
example_data/: genetic_map_GRCh38_chr20.txt
src/: extract_ibd_segments.cpp  extract_ibd_segments.hpp  main.cpp  main2.cpp  mrcaFinder.cpp  read_rate_map.cpp  read_rate_map.hpp
subprojects/: htslib.wrap
